@@ -3288,7 +3288,7 @@ still be revived after being shot.).</p>
 	<dt>2
 	<dd>Don't drop spectators when in following mode
 	<dt>4
-	<dd>ETmain inactivity behavior (don't wait for a full server)
+	<dd>Don't wait for a full server to kick spectators (etmain spectator inactivity behavior)
 	<dt>8
 	<dd>Shrubbot flag '0' admins will be moved to spectators due to team inactivity
 </dl>
